added some discussion

--- a/lokalizom.bib
+++ b/lokalizom.bib
@@ -12683,3 +12683,42 @@ ISSN={2325-8861},}
     pages = {389--399}
 }
 
+@article{chou1978prediction,
+   author={Chou, P. Y.  and Fasman, G. D.},
+   title={Prediction of the secondary structure of proteins from their amino acid sequence},
+   journal={Advances in enzymology and related areas of molecular biology},
+   year={1978},
+   volume={47},
+   pages={45--148}
+}
+
+@book{dawson1972size,
+   author={Dawson, D. M.},
+   editor={Brock, D.J.H. and Mayo, O.},
+   booktitle={The Biochemical Genetics of Man},
+   title={Size},
+   publisher={Academic Press},
+   year={1972},
+   pages={1--38},
+   address={New York}
+}
+
+@book{fasman1976handbook,
+   author={Fasman, G. D.},
+   booktitle={Handbook of Biochemistry and Molecular Biology},
+   title={Proteins},
+   publisher={CRC Press},
+   year={1976},
+   edition={3rd},
+   volume={1},
+   address={Cleveland}
+}
+
+@INPROCEEDINGS{maetschke2005blomap,
+    author = {Stefan Maetschke and Michael Towsey and Mikael Bodén},
+    title = {BLOMAP: An Encoding of Amino Acids which Improves Signal Peptide Cleavage Site Prediction},
+    booktitle = {In Chen Y., Wong L: Proc. 3 rd AsiaPacific Bioinformatics Conference, Imperial},
+    year = {2005},
+    pages = {141--150},
+    publisher = {College Press}
+}
