--- a/paper.tex
+++ b/paper.tex
@@ -390,7 +390,26 @@ The fourth group is the most diverse among both encodings. The key is obvious in
 
 \subsection*{Benchmark test}
 
-To provide the honest comparison, we trained our model on 2311 signal peptide-containing sequences deposited in Uniprot until 2010 year (an iteration of signalHsmm called signalHsmm-2010). The data set should correspond to the set used to train SignalP 4.1. Interestingly, our algorithm performed very well even if it was trained on a very small sets including only 336 sequences collected till 1987 year, just after the first method predicting signal peptide was published~\citep{1986vonheijnea}. The signalHsmm-1987 was able to very accurately predict a signal peptide, even better than predictors trained on richer data sets. It indicates that signalHsmm is very stable and is able to recover the structure of signal peptides from even very small data sets.
+To provide the honest comparison, we trained our model on 2311 signal peptide-containing sequences deposited in Uniprot until 2010 year (an iteration of signalHsmm called signalHsmm-2010). The data set should correspond to the set used to train SignalP 4.1. Interestingly, our algorithm performed very well even if it was trained on a very small sets including only 336 sequences collected till 1987 year, just after the first method predicting signal peptide was published~\citep{1986vonheijnea}. The signalHsmm-1987 was able to very accurately predict a signal peptide, even better than predictors trained on richer data sets. It indicates that signalHsmm is very stable and is able to recover the structure of signal peptides from even very small data sets~\ref{tab:bench2010}.
+
+\begin{table}[ht]
+\centering
+\begin{tabular}{lrrrr}
+  \toprule
+Software name & AUC & Sensitivity & Specificity & MCC \\ 
+  \midrule
+signalP 4.1 (no tm) \citep{2011petersensignalp} & 0.9424 & 0.9720 & 0.9128 & 0.8859 \\ 
+   \rowcolor[gray]{0.85}signalP 4.1 (tm) \citep{2011petersensignalp} & 0.9675 & 0.9579 & 0.9771 & 0.9353 \\ 
+  PrediSi \citep{2004hillerpredisi} & 0.8959 & 0.9065 & 0.8853 & 0.7919 \\ 
+   \rowcolor[gray]{0.85}Phobius \citep{2004klla} & 0.9515 & 0.9673 & 0.9358 & 0.9033 \\ 
+  Philius \citep{2008reynoldstransmembrane} & 0.9376 & 0.9533 & 0.9220 & 0.8755 \\ 
+   \rowcolor[gray]{0.85}signalHsmm-2010 & 0.9429 & 0.9393 & 0.8761 & 0.8166 \\ 
+  signalHsmm-1989 & 0.9455 & 0.9486 & 0.8945 & 0.8440 \\ 
+   \bottomrule
+\end{tabular}
+\caption{Comparison of Area Under the Curve, Sensitivity, Specificity and Matthews Correlation Coefficient for different classifiers.} 
+\label{tab:bench2010}
+\end{table}
 
 To check universality of our probabilistic model, we also validated it on signal peptides belonging to specific taxonomic groups. As the example, we chose the Plasmodiidae family including malaria parasites. The testing data set extracted from UniProt data base contained 111 proteins with a signal peptide and 361 without it. We repeated the benchmark scheme for different classifiers – Tab. XXX.
 
