--- a/paper.tex
+++ b/paper.tex
@@ -411,7 +411,25 @@ signalP 4.1 (no tm) \citep{2011petersensignalp} & 0.9424 & 0.9720 & 0.9128 & 0.8
 \label{tab:bench2010}
 \end{table}
 
-To check universality of our probabilistic model, we also validated it on signal peptides belonging to specific taxonomic groups. As the example, we chose the Plasmodiidae family including malaria parasites. The testing data set extracted from UniProt data base contained 111 proteins with a signal peptide and 361 without it. We repeated the benchmark scheme for different classifiers – Tab. XXX.
+To check universality of our probabilistic model, we also validated it on signal peptides belonging to specific taxonomic groups. As the example, we chose the Plasmodiidae family including malaria parasites. The testing data set extracted from UniProt data base contained 111 proteins with a signal peptide and 361 without it. We repeated the benchmark scheme for different classifiers (Tab.~\ref{tab:bench2010plas}).
+
+\begin{table}[ht]
+\centering
+\begin{tabular}{lrrrr}
+  \toprule
+Software name & AUC & Sensitivity & Specificity & MCC \\ 
+  \midrule
+signalP 4.1 (no tm) \citep{2011petersensignalp} & 0.7928 & 0.6471 & 0.9385 & 0.6185 \\ 
+   \rowcolor[gray]{0.85}PrediSi \citep{2004hillerpredisi} & 0.6597 & 0.3725 & 0.9469 & 0.4028 \\ 
+  Phobius \citep{2004klla} & 0.7963 & 0.6765 & 0.9162 & 0.5991 \\ 
+   \rowcolor[gray]{0.85}Philius \citep{2008reynoldstransmembrane} & 0.7753 & 0.6176 & 0.9330 & 0.5841 \\ 
+  signalHsmm-2010 & 0.9340 & 0.7941 & 0.8939 & 0.6526 \\ 
+   \rowcolor[gray]{0.85}signalHsmm-1989 & 0.9326 & 0.9216 & 0.8966 & 0.7531 \\ 
+   \bottomrule
+\end{tabular}
+\caption{Comparison of Area Under the Curve, H-measure and Matthews Correlation Coefficient for different classifiers considering only proteins belonging to Plasmodiidae.} 
+\label{tab:bench2010plas}
+\end{table}
 
 \section*{Discussion}
 
