--- a/paper.tex
+++ b/paper.tex
@@ -25,7 +25,7 @@
 \begin{abstract}
 The proper localization of proteins in a cell is essential to maintain their desired function. Information about the protein destination is included within the very protein in the form of short peptides called targeting signals. Ones of them are signal peptides, diverse N-terminal sequences, which are responsible for targeting of proteins to endomembrane system and their export outside the cell. Proteins equipped with signal peptides play crucial roles in metabolism, maintenance of tissue structure, immune response and regulation of other organismal functions. Moreover, the transport of proteins through the endomembrane system is important for their correct folding and posttranslational modifications. 
 
-A common model of classical signal peptides assumes that they start with a positively charged n-region, followed by a hydrophobic h-region and a c-region ended with a cleavage site recognised by a signal peptidase. However, our studies of many protein sequences representing the wide range of diversified taxonomic organisms indicate a variability of signal peptides. Therefore, we designed a new, more univeral probabilistic model for eukaryotic signal peptides, which includes knowledge about their organisation, amino acid composition and variation.
+A common model of classical signal peptides assumes that they start with a positively charged n-region, followed by a hydrophobic h-region and a c-region ended with a cleavage site recognised by a signal peptidase. However, studies of many protein sequences representing the wide range of diversified taxonomic organisms indicate a variability of signal peptides. Therefore, we designed a new, more univeral probabilistic model for eukaryotic signal peptides, which includes knowledge about their organisation, amino acid composition and variation.
 
 The proposed model is based on hidden semi-Markov models (HSMMs) and use intrinsic knowledge about signal peptides. The big advantage of the algorithm is its extensibility. Using the n-grams (k-mers) we point how the general model can be attuned to yield not only better results, but also more information about signal peptides.
 
@@ -47,11 +47,11 @@ Proteins of eukaryotes are encoded in nuclear genomes and are synthetized in rib
 
 Signal peptides are responsible for targeting of proteins via the Sec61 translocation channel~\citep{2007rapoportprotein} to endomembrane system, which includes endoplasmic reticulum, Golgi apparatus and endosomes. Such proteins can stay inside of these compartments, or can be inserted into cellular membranes or exported outside the cell. Proteins equipped with signal peptides constitute a substantial fraction of the whole proteome. They play crucial roles in metabolism ($\beta$ galactosidase, pepsins)~\citep{1991hofmannmutations}, maintenance of tissue structure (collagen)~\citep{2001chanaberrant}, immune response (interferons, interleukins)~\citep{2005zhangalteration} and regulation of other organismal functions (prolactin, glucagon)~\citep{2010huangrole}. Moreover, passing proteins through the endomembrane system is important for their correct folding and posttranslational modification such as glycosylation and phosphorylation.
 
-Although signal peptides are quite variable, some general architecture were proposed~\citep{1994izardsignal, 2013vossmechanism} - Fig. \ref{fig:sparch}. It is assumed that signal peptides start with a positively charged sequence of amino acid residues, called the n-region with the length of about 5-8 residues. They probably enforce a proper topology on the polypeptide during translocation through membrane based on the positive-inside rule~\citep{1988vonheijnetopogenic}. The first region is followed by a stretch of hydrophobic amino acids (h-region) with the length of about 8-12 residues. It constitutes a core region of signal peptide and has a tendency to form $\alpha$-helix. The third part of a signal peptide, usually 6 residues long, is a polar, but uncharged c-region ended with a cleavage site recognized by the signal peptidase. The amino acid composition and the length of these regions vary between signal peptides, which influences the efficiency of protein secretion~\citep{2006hegdethe}.
+Despite the low sequence homology between signal peptides~\citep{1999ladungaphysean}, some general architecture were proposed~\citep{1994izardsignal, 2013vossmechanism} - Fig. \ref{fig:sparch}. It is assumed that signal peptides start with a positively charged sequence of amino acid residues, called the n-region with the length of about 5-8 residues. They probably enforce a proper topology on the polypeptide during translocation through membrane based on the positive-inside rule~\citep{1988vonheijnetopogenic}. The first region is followed by a stretch of hydrophobic amino acids (h-region) with the length of about 8-12 residues. It constitutes a core region of signal peptide and has a tendency to form $\alpha$-helix. The third part of a signal peptide, usually 6 residues long, is a polar, but uncharged c-region ended with a cleavage site recognized by the signal peptidase. The amino acid composition and the length of these regions vary between signal peptides, which influences the efficiency of protein secretion~\citep{2006hegdethe}.
 
 \begin{figure}[ht]\centering
 \includegraphics[width=0.55\textwidth]{figures/SP.png}
-\caption{The organization of signal peptide.}
+\caption{The organization of signal peptide. The figure is not drawn to scale.}
 \label{fig:sparch}
 \end{figure}
 
@@ -84,18 +84,17 @@ All programs used in signal peptide recognition are trained on real protein sequ
 
 \subsection*{Overview}
 
-The functionality of a signal peptide depends not on exact sequence of specific amino acids, but on the physicochemical properties of residues in a given region. Henceforth, the usage of raw amino acid sequences is superfluous and introduces unnecessary information. To utilize this property of signal peptide recognition, we cluster amino acids into several groups based on the physicochemical features of residues.
+The functionality of a signal peptide depends not on exact sequence of specific amino acids, but on the physicochemical properties of residues in a given region. Henceforth, the usage of raw amino acid sequences is superfluous and introduces unnecessary information. To utilize this property of signal peptide recognition, we clustered amino acids into several groups based on the physicochemical features of residues.
 
-The pre-processed sequences are further analyzed by the heuristic algorithm, which determines borders between three characteristic signal peptide regions, the enhanced version of algorithm presented in~\cite{1998nielsenprediction}. Using the current information from experimentalists, we refined the region recognition criteria.
+The pre-processed sequences were further analyzed by the heuristic algorithm, which determines borders between three characteristic signal peptide regions, the enhanced version of algorithm presented in~\cite{1998nielsenprediction}. We refined some region recognition criteria to attune the algorithm to less typical signal peptides.
 
-Next, two models are trained to recognize proteins with and without a signal peptide. The first one is a hidden semi-Markov model, in which each of three signal peptide regions is represented by a different hidden state. The additional fourth hidden state represents mature protein. Each state is described by the frequencies of amino acid groups  within that state. The distribution of hidden states durations, the number of amino acids related to each hidden state in signal peptide, is based on the empirical density of region lengths from the training set. 
+Next, two models are trained to recognize proteins with and without a signal peptide. The first one is a hidden semi-Markov model, in which each of three signal peptide regions is represented by a different hidden state. The additional fourth hidden state represents mature protein. Each state is described by the frequencies of amino acid groups  within that state. The distribution of hidden states durations, the number of amino acids related to each hidden state in signal peptide, is based on the empirical density of region lengths from the training set. Furthermore, the hidden semi-Markov model was enriched with n-grams representing signal peptide cleavage sites.
 
 The second model is a simple probabilistic approach in which no association between amino acids was assumed, and probability of amino acids groups occurrence was determined by their frequencies in mature proteins.
 
 \subsection*{Data selection}
 
-
-Eukaryotic protein sequences and their annotations were properly prepared according to the literature of the subject and downloaded from UniProt database release 2015\_06. The positive set contained 2~589 sequences with an experimentally confirmed signal peptide and its cleavage site. Sequences with more than one cleavage site were excluded from the final data set. The negative set comprised 152~272 sequences without any signal peptide annotation. Protein sequences with ambiguous symbols: X, J, Z and B were removed from the final sets. Proteins with selenocysteine (U) were also excluded from data set, because there are no records of signal peptides containing this amino acid.
+Eukaryotic protein sequences and their annotations were properly prepared according to the literature of the subject and downloaded from UniProt database release 2015\_06. The positive set contained 2~589 sequences with an experimentally confirmed signal peptide, its start and cleavage site. Sequences with more than one cleavage site were excluded from the final data set. The negative set comprised 152~272 sequences without any signal peptide annotation. Protein sequences with ambiguous symbols: X, J, Z and B were removed from the final sets. Proteins with selenocysteine (U) were also excluded from data set, because there are no records of signal peptides containing this amino acid.
 
 \subsection*{Clustering of amino acids}
 
@@ -291,7 +290,7 @@ Fig.~\ref{fig:signalHsmm} is easy to interpret for a researcher without any math
       
       %\draw [decorate,line width=3pt,decoration={brace,amplitude=10pt}] ([xshift=5mm, yshift=5mm]kmer1) -- ([yshift=-25mm]kmer3) node [black,midway,xshift=0.6cm] {\footnotesize $P_1$};
       \draw[decoration={brace,amplitude=10pt, raise=5pt},decorate, line width=2pt]  
-      ([yshift=1mm]kmer1.east) -- ([yshift=-5mm]kmer3.east) node [black,midway,xshift=0.6cm] {\large \color{yellow!50!black!90} k-mer};
+      ([yshift=1mm]kmer1.east) -- ([yshift=-5mm]kmer3.east) node [black,midway,xshift=0.6cm] {\large \color{black!90} n-gram};
     \end{tikzpicture} }
     \caption{The diagram of signalHsmm extended with the n-gram cleavage site model.}
     \label{fig:ngramext}
@@ -300,15 +299,9 @@ Fig.~\ref{fig:signalHsmm} is easy to interpret for a researcher without any math
     
 \subsection*{n-gram extension}
 
-HSMM can be further extended to use some specific motives that might occur in proximity of cleavage site.
-Such an extension requires defining additional hidden states. 
-To find such motives we analyze n-grams (k-mers) -- vectors of n characters derived from input sequences. 
-The rigid structure of n-grams may mirror cleavage sites, which are more 
-conservative than other parts of signal peptide~\citep{2004hillerpredisi}.
-Scheme of extended HSMM can be seen in Fig.~\ref{fig:ngramext}.
+Hidden semi-Markov models may be flexibly enhanced by adding additional hidden states. To improve our model, we added few supplementary states representing specific motives that might occur in proximity of cleavage site. The structure of cleavage sites, more conservative  than other parts of signal peptide~\citep{2004hillerpredisi}, may be mirrored by n-grams (k-mers), short vectors of $n$ characters derived from input sequences. 
 
-Using the biogram software~\citep{biogramPackage} we extracted n-grams from cleavage sites of signal peptides. 
-XXX n-grams were further used in the analysis
+Using the biogram software~\citep{biogramPackage} we extracted n-grams from cleavage sites of signal peptides. The analyzed sequences were already encodeded using amino acid classification providing the best sensitivity of a general model (see Tab.\ref{tab:best}. Selected n-grams, representing less common cleavage site motifs, were included in the HSMM model as the alternative paths at the end of c-region. The achitecture of extended HSMM can be seen in Fig.~\ref{fig:ngramext}.
 
 \section*{Results and discussion}
 
@@ -413,7 +406,7 @@ signalP 4.1 (no tm) \citep{2011petersensignalp} & 0.9424 & 0.9720 & 0.9128 & 0.8
 \label{tab:bench2010}
 \end{table}
 
-To check universality of our probabilistic model, we also validated it on signal peptides belonging to specific taxonomic groups. As the example, we chose the Plasmodiidae family including malaria parasites. The testing data set extracted from UniProt data base contained 111 proteins with a signal peptide and 361 without it. We repeated the benchmark scheme for different classifiers (Tab.~\ref{tab:bench2010plas}).
+To check universality of our probabilistic model, we also validated it on signal peptides belonging to specific taxonomic groups. As the example, we chose the Plasmodiidae family including malaria parasites, because of her medical significance. The testing data set extracted from UniProt data base contained 102 proteins with a signal peptide and 358 without it. We repeated the benchmark scheme for different classifiers (Tab.~\ref{tab:bench2010plas}).
 
 \begin{table}[ht]
 \centering
@@ -435,16 +428,18 @@ signalP 4.1 (no tm) \citep{2011petersensignalp} & 0.7928 & 0.6471 & 0.9385 & 0.6
 
 \subsection*{Conclusions}
 
-Despite the presence of signal peptide predicting software, there are no exhaustive studies devoted to the analysis of the signal peptide structure and taxonomical variability. Our research focuses on a transparent model of signal peptide instead of a ‘black-box’ solution. Aside from a confirmation of the accepted signal peptide model (hydrophibicity of the h-region, polarity of the n-region), we also discovered new relationships. We found the alanine is one of the most typical amino acids for the c-region and occurs there far more often than in the other parts of signal peptides and mature proteins. The presence of alanine in the signal peptide cleavage site~\cite{1986vonheijnea} cannot explain such overrepresentation of group containing alanine in the c-region.
+The architecture of existing signal peptide predicting software is usually opaque, preventing analysis of decision rules included in the model. Without ability to trace the computations, researchers cannot discover which parameters are responsible for predictions. Considering the biological context of the problem, we see a need for a transparent model of signal peptide. signalHsmm is a first step in this direction, providing users with both prediction results and the extandable, readable predictive model. 
+
+Aside from a confirmation of the accepted signal peptide model (hydrophibicity of the h-region, polarity of the n-region), we also discovered new relationships. We found the alanine is one of the most typical amino acids for the c-region and occurs there far more often than in the other parts of signal peptides and mature proteins. The presence of alanine in the signal peptide cleavage site~\cite{1986vonheijnea} cannot explain such overrepresentation of group containing alanine in the c-region.
 
 The good performance of signalHsmm confirms that properties of signal peptides do not depend on their exact sequence, but on the physicochemical features of the amino acids. Although this finding may seem to offer a minimal improvement when we consider the most popular signal peptides, this generalization pays off when we analyze more specific cases, as signal peptides of \textit{Plasmodiidae}.
 
 The flexibility and efficient information recovery makes our model unique among similar software. The signalHsmm not only shows very good performance but also is adjustable to model properly very specific signal peptides belonging to poorly represented taxonomic groups in databases.
 
 \subsection*{Availability and implementation}
-The signalHsmm web-server is avaible under address: \url{http://smorfland.uni.wroc.pl/signalhsmm}.
+The signalHsmm prediction web-server is avaible under address: \url{http://smorfland.uni.wroc.pl/signalhsmm}.
 
-signalHsmm is implemented as an R package freely available on CRAN: \url{http://cran.r-project.org/web/packages/signal.hsmm}.
+signalHsmm is implemented as an R package freely available on CRAN: \url{http://cran.r-project.org/web/packages/signal.hsmm}. Stand-alone version offers also tools to build and test own signal peptide models.
 
 
 
